force-app/main/default/objects/MissionAssignment__c/MissionAssignment__c.object-meta.xml
<CustomObject>
    <label>Mission Assignment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mission Assignments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>