force-app/main/default/objects/MissionAssignment__c/fields/Mission__c.field-meta.xml
<CustomField>
    <fullName>Mission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mission</label>
    <referenceTo>SuperheroMission__c</referenceTo>
    <relationshipLabel>Mission Assignments</relationshipLabel>
    <relationshipName>MissionAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>