force-app/main/default/objects/MissionAssignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Mission__c</columns>
    <columns>Hero__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>